# winter

./: .gitignore  CMakeLists.txt  README.md
assets/shaders/: default.vert  diffuse.frag  diffuse.vert  unlit.frag  unlit.vert
ext/: glad.c
include/GLFW/: glfw3.h
include/KHR/: khrplatform.h
include/glad/: glad.h
include/glm/: geometric.hpp
include/glm/detail/: type_half.inl
include/stb/: stb_image.h
lib/: glfw3.lib
src/: Camera.cpp  Camera.h  Mesh.cpp  Mesh.h  Renderer.cpp  Renderer.h  ShaderProgram.cpp  ShaderProgram.h  Sprite.cpp  Sprite.h  Texture2d.cpp  Texture2d.h  Window.cpp  Window.h  actor.cpp  actor.h  camera.cpp  camera.h  component.cpp  component.h  file_io.cpp  file_io.h  main.cpp  material.cpp  material.h  mesh.cpp  mesh.h  quad.cpp  quad.h  rect.h  renderer.cpp  renderer.h  resource_manager.cpp  resource_manager.h  shader_program.cpp  shader_program.h  sprite.cpp  sprite.h  sprite_component.cpp  sprite_component.h  (+7 more)
